--- a/architecture-examples/dojo/index-dev.html
+++ b/architecture-examples/dojo/index-dev.html
@@ -31,10 +31,10 @@
 	<![endif]-->
 </head>
 <body>
-	<section id="todoapp" data-dojo-type="todo/app18"></section>
+	<section id="todoapp" data-dojo-type="todo/app"></section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Created by <a href="http://jamesthom.as/">James Thomas</a> and <a href="https://github.com/edchat">Ed Chatelain</a></p>
+        <p>Created by <a href="http://jamesthom.as/">James Thomas</a>, <a href="https://github.com/edchat">Ed Chatelain</a> and <a href="https://github.com/asudoh">Akira Sudoh</a></p>
 	</footer>
 
 	<script src="../../assets/base.js"></script>
