--- a/architecture-examples/dojo/index.html
+++ b/architecture-examples/dojo/index.html
@@ -27,10 +27,10 @@
 	<![endif]-->
 </head>
 <body>
-    <section id="todoapp" data-dojo-type="todo/app18"></section>
+    <section id="todoapp" data-dojo-type="todo/app"></section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-        <p>Created by <a href="http://jamesthom.as/">James Thomas</a> and <a href="https://github.com/edchat">Ed Chatelain</a></p>
+        <p>Created by <a href="http://jamesthom.as/">James Thomas</a>, <a href="https://github.com/edchat">Ed Chatelain</a> and <a href="https://github.com/asudoh">Akira Sudoh</a></p>
 	</footer>
 
 	<script src="../../assets/base.js"></script>
@@ -39,13 +39,10 @@
 			async: true,
 			parseOnLoad: true,
 			locale: "en",
-			paths: {
-				"dijit": "../dijit-1.8"
-			},
 			deps: ["dojo/parser", "dojo/domReady!"],
 			mvc: {debugBindings: true}
 		};
 	</script>
-	<script src="js/lib/dojo-1.8/dojo.js"></script>
+	<script src="js/lib/dojo/dojo.js"></script>
 </body>
 </html>
